fix z-index

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -22,7 +22,6 @@ i {
 .header {
     /* padding-bottom: 30px; */
     position: relative;
-    z-index: -1;
 }
 
 .header a {
